Подготовить проект к началу выполнения ТЗ-6